# such-interpreter-python

./: .gitignore  README.md  SPECIFICATION.md  main.py  pyproject.toml
classes/: Interpreter.py
classes/Statements/: Definition.py  Header.py  Statement.py
classes/Types/: Array.py  Boolean.py  DataType.py  Integer.py  Keymap.py  NullType.py  String.py  Typing.py
data/json/: foo.json
data/such/: bar.such  baz.such  foo.such
src/such_interpreter/: __init__.py  such.py
src/such_interpreter/utils/Constants/: constants.py
src/such_interpreter/utils/Functions/: set_to_tuple_with_priorities.py
src/such_interpreter/utils/Statements/: Definition.py  Header.py  Statement.py
src/such_interpreter/utils/Types/: Array.py  Boolean.py  Integer.py  Keymap.py  NullType.py  String.py
tests/: test_main.py
tests/examples/read_examples/: bar.such  bas.such  foo.such
tests/examples/write_examples/json/: full.json  reduced.json  semi_reduced.json
tests/examples/write_examples/such/: full.such  reduced.such  semi.such
utils/: Interpreter.py  constants.py
utils/Statements/: Definition.py  Header.py  Statement.py
utils/Types/: Array.py  Boolean.py  Integer.py  Keymap.py  NullType.py  String.py
