[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "such-interpreter"
version = "0.1.0"
authors = [
    { name="Piker", email="iker.pavcur@gmail.com" },
]
description = "Interpreter for the such. language in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/piker98988/such-interpreter-python"
"Bug Tracker" = "https://github.com/piker98988/such-interpreter-python/issues"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = "src"